# -localmind-audio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  plan.md  pyproject.toml  requirements.txt  spec.md
.humanize/ideas/: spec-20260621-115845.md
.humanize/skill/2026-06-21_12-25-19-61571-89c5165a/: input.md  metadata.md  output.md
.humanize/skill/2026-06-21_12-31-41-73005-dda2ae77/: input.md  metadata.md  output.md
docs/: benchmark.md  provisioning.md  usage.md
localmind/: __init__.py  cli.py  mlx_runtime.py  store.py  vad.py
localmind/audio/: __init__.py  decode.py  errors.py
localmind/bench/: __init__.py  fixtures.py  report.py
localmind/bench/schemas/: summary_example.json  transcript_expected.json
localmind/provisioning/: __init__.py  errors.py  manifest.py  provisioner.py
localmind/stt/: __init__.py  chunking.py  segment.py  transcriber.py
localmind/summary/: __init__.py  schema.py  summarizer.py
scripts/: provision_models.py
tests/: conftest.py  test_audio_decode.py  test_bench.py  test_cli.py  test_no_network.py  test_progress_cancel.py  test_provisioning.py  test_store.py  test_stt.py  test_summary.py  test_vad.py
