[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localmind"
version = "0.1.0"
description = "LocalMind Audio — 100% on-device macOS voice-to-text + local-LLM analysis pipeline"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
ml = [
    # Real STT + LLM backends. Apple-silicon only; install on Python 3.11+:
    #   .venv/bin/python -m pip install -e ".[ml]"
    "mlx-whisper>=0.1.0",
    "mlx-lm>=0.1.0",
]
dev = [
    "pytest>=8",
    "imageio-ffmpeg>=0.5",  # provides a local ffmpeg binary for m4a/mp3 decode tests
]

[tool.setuptools.packages.find]
include = ["localmind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
